Optimize MAVEN_OPTS in Jenkinsfile
Removed MaxPermSize from MAVEN_OPTS to optimize memory usage.